Added dropdown to select between b64 or binary

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -96,31 +96,31 @@
                                 <h4 style="margin-top:-0.3em">Users</h4>
                                 <p>There are two possible methods to search for users:</p>
                                 <ul>
-                                    <li>The {username} variable can be placed directly into the LDAP Search Filter. This variable will be replaced during the search with the entered username. If you use this method, the LDAP Search Attributes value is optional and will be ignored, and you must implement the attribute comparison(s) manually in your filter.<br/><i>For example, "(&(objectclass=mailUser)(|(uid={username})(mail={username})))" will explicitly look for the username in either the "uid" or "mail" entries, and the user must be part of "objectclass=mailUser".</i></li>
-                                    <li>The LDAP Search Filter can be used as a subcomponent of a larger search filter constructed at runtime. This is the default if the LDAP Search Filter does not include the {username} variable at least once. For each LDAP Search Attributes entry, the entered username will be used with the attribute as an 'or' condition search filter. If you use this method, the LDAP Search Filter is optional and may be empty.<br/><i>For example, "(objectclass=mailUser)" as the Search Filter and "uid, mail" as the Search Attributes will generate "(&(objectclass=mailUser)(|(uid={username})(mail={username})))" during lookup, functionally identical to the above example.</i></li>
+                                    <li>The {username} variable can be placed directly into the LDAP Search Filter. This variable will be replaced during the search with the entered username. If you use this method, the LDAP Search Attributes value is optional and will be ignored, and you must implement the attribute comparison(s) manually in your filter.<br /><i>For example, "(&(objectclass=mailUser)(|(uid={username})(mail={username})))" will explicitly look for the username in either the "uid" or "mail" entries, and the user must be part of "objectclass=mailUser".</i></li>
+                                    <li>The LDAP Search Filter can be used as a subcomponent of a larger search filter constructed at runtime. This is the default if the LDAP Search Filter does not include the {username} variable at least once. For each LDAP Search Attributes entry, the entered username will be used with the attribute as an 'or' condition search filter. If you use this method, the LDAP Search Filter is optional and may be empty.<br /><i>For example, "(objectclass=mailUser)" as the Search Filter and "uid, mail" as the Search Attributes will generate "(&(objectclass=mailUser)(|(uid={username})(mail={username})))" during lookup, functionally identical to the above example.</i></li>
                                 </ul>
                                 <p>At least one method must be chosen and configured below. If upgrading from plugin version 16 or older, the second option will be used by default.</p>
                                 <p>Note: Usernames are treated case-insensitive in both cases, as an LDAP search is not case-sensitive.</p>
-                                <br/>
+                                <br />
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapSearchFilter" placeholder="(memberOf=CN=JellyfinUsers,DC=contoso,DC=com)" label="LDAP Search Filter:" />
                                     <div class="fieldDescription">
-                                        LDAP search filter to limit user searches.<br/>
+                                        LDAP search filter to limit user searches.<br />
                                     </div>
                                 </div>
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapSearchAttributes" placeholder="uid, cn, mail, displayName" label="LDAP Search Attributes:" />
                                     <div class="fieldDescription">
-                                        A comma-separated list of attributes to search for the username.<br/>
+                                        A comma-separated list of attributes to search for the username.<br />
                                     </div>
                                 </div>
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapUidAttribute" required placeholder="uid" label="LDAP Uid Attribute:" />
-                                    <div class="fieldDescription">The LDAP attribute to use to uniquely identify the user.<br/><i>For example, 'uid' means we will use the LDAP 'uid' attribute to uniquely identify the user.</i></div>
+                                    <div class="fieldDescription">The LDAP attribute to use to uniquely identify the user.<br /><i>For example, 'uid' means we will use the LDAP 'uid' attribute to uniquely identify the user.</i></div>
                                 </div>
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapUsernameAttribute" required placeholder="cn" label="LDAP Username Attribute:" />
-                                    <div class="fieldDescription">The LDAP attribute to use as the Jellyfin username.<br/><i>For example, 'cn' means we will use the LDAP 'cn' attribute as the Jellyfin username.</i></div>
+                                    <div class="fieldDescription">The LDAP attribute to use as the Jellyfin username.<br /><i>For example, 'cn' means we will use the LDAP 'cn' attribute as the Jellyfin username.</i></div>
                                 </div>
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapPasswordAttribute" label="LDAP Password Attribute:" />
@@ -139,6 +139,14 @@
                                     <input is="emby-input" type="text" id="txtLdapProfileImageAttribute" label="LDAP Profile Image Attribute:" />
                                     <div class="fieldDescription">The LDAP attribute for synchronizing profile images.</div>
                                 </div>
+                                <div class="inputContainer fldExternalAddressFilter">
+                                    <select is="emby-select" id="selLdapProfileImageAttributeFormat">
+                                        <option value="binary">Binary</option>
+                                        <option value="base64">Base64 encoded</option>
+                                        <!--<option value="url">URL</option>-->
+                                    </select>
+                                    <div class="fieldDescription">How is the data encoded in the LDAP attribute.</div>
+                                </div>
                                 <hr>
                                 <h4>Administrators</h4>
                                 <div class="inputContainer fldExternalAddressFilter">
@@ -147,7 +155,8 @@
                                 </div>
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapAdminFilter" label="LDAP Admin Filter:" />
-                                    <div class="fieldDescription">The LDAP search filter to find administrative users for Jellyfin, e.g. (objectClass=JellyfinAdministrator). Variable {username} is available for more complex filters e.g. (memberUid={username}).
+                                    <div class="fieldDescription">
+                                        The LDAP search filter to find administrative users for Jellyfin, e.g. (objectClass=JellyfinAdministrator). Variable {username} is available for more complex filters e.g. (memberUid={username}).
                                         If left blank, administrative state must be configured manually for each user. If set, administrative access will automatically be applied
                                         (either granting or removing administrative access) when the LDAP user next logs in. If the user is currently logged in, this filter will
                                         not change their active session permissions.
@@ -166,7 +175,7 @@
                                     <span>Save and Test LDAP Filter Settings</span>
                                 </button>
                                 <div id="divFilterTestResults"></div>
-                                <br/>
+                                <br />
                                 <div class="inputContainer fldExternalAddressFilter">
                                     <input is="emby-input" type="text" id="txtLdapSearchTest" label="Test Login Name:" />
                                     <div class="fieldDescription">A user login to search the LDAP for to test attribute configuration.</div>
@@ -245,6 +254,7 @@
                 txtLdapPasswordAttribute: document.querySelector("#txtLdapPasswordAttribute"),
                 chkEnableProfileImageSync: document.querySelector("#chkEnableProfileImageSync"),
                 txtLdapProfileImageAttribute: document.querySelector("#txtLdapProfileImageAttribute"),
+                selLdapProfileImageAttributeFormat: document.querySelector("#selLdapProfileImageAttributeFormat"),
                 chkEnableAllFolders: document.querySelector('#chkEnableAllFolders'),
                 folderAccessList: document.querySelector('.folderAccess'),
                 txtPasswordResetUrl: document.querySelector("#txtLdapPasswordResetUrl")
@@ -281,6 +291,7 @@
                     LdapConfigurationPage.txtLdapPasswordAttribute.value = config.LdapPasswordAttribute;
                     LdapConfigurationPage.chkEnableProfileImageSync.checked = config.EnableLdapProfileImageSync;
                     LdapConfigurationPage.txtLdapProfileImageAttribute.value = config.LdapProfileImageAttribute;
+                    LdapConfigurationPage.selLdapProfileImageAttributeFormat.value = config.LdapProfileImageAttributeFormat;
                     config.EnableAllFolders = config.EnableAllFolders || false;
                     LdapConfigurationPage.chkEnableAllFolders.checked = config.EnableAllFolders;
                     /* Default to empty array if Enabled Folders is not set */
@@ -370,6 +381,7 @@
                     config.LdapPasswordAttribute = LdapConfigurationPage.txtLdapPasswordAttribute.value;
                     config.EnableLdapProfileImageSync = LdapConfigurationPage.chkEnableProfileImageSync.checked;
                     config.LdapProfileImageAttribute = LdapConfigurationPage.txtLdapProfileImageAttribute.value;
+                    config.LdapProfileImageAttributeFormat = LdapConfigurationPage.selLdapProfileImageAttributeFormat.value;
                     /* Map the set of checked input items to an array of library Id's */
                     config.EnableAllFolders = LdapConfigurationPage.chkEnableAllFolders.checked || false;
                     let folders = document.querySelectorAll('#folderList input');
