--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -143,7 +143,7 @@
                                     <select is="emby-select" id="selLdapProfileImageAttributeFormat">
                                         <option value="binary">Binary</option>
                                         <option value="base64">Base64 encoded</option>
-                                        <!--<option value="url">URL</option>-->
+                                        <option value="url">URL</option>
                                     </select>
                                     <div class="fieldDescription">How is the data encoded in the LDAP attribute.</div>
                                 </div>
