Expanded description to elaborate on possible failure

--- a/LDAP-Auth/Config/configPage.html
+++ b/LDAP-Auth/Config/configPage.html
@@ -147,6 +147,8 @@
                                         <option value="Url">URL</option>
                                     </select>
                                     <div class="fieldDescription">The value format of the Profile Image. (Default will try and determine it automatically)</div>
+                                    <br/>
+                                    <div class="fieldDescription">Default could fail under certain circumstances so if there are problems please select the format explicitly</div>
                                 </div>
                                 <hr>
                                 <h4>Administrators</h4>
